apps/erin-apps/webhook-mail/base/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-webhook
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: mail-webhook
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-webhook
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: mailhook-fmt2.generalprogramming.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mail-webhook
                port:
                  number: 80
